			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Graphical debugger after throw/1.  Alan Baljeu.

  * FIXED: fatal error on read/1 in 0-bytes outside quoted strings/atoms.

  * FIXED: Error tracing multi-threaded code in plcon.exe.  Mike Elston.

  * ADDED: Prolog flag verbose_load to get status of silent(Bool) from
    load_files/2.  Tom Schrijvers.

  * ADDED: First version of new time support.  With input from various
    users from the mainlinglist.

  * ENHANCED: Try to reuse variable names when writing results of toplevel
    queries.

  * ADDED: with_output_to(+Out, :Goal) to allow writing to atoms, strings,
    code-lists, etc.  Also allows for format(+Out, +Fmt, +Args) with the
    same specifications.  Moved sformat/[2,3] to the compatibility library.

  * MODIFIED: functions lsb and msb throw domain error on 0.  Updated
    documentation.  With help from Richard O'Keefe and Bart Demoen.

  * ADDED: Documentation for library(ordsets).

==============================
VERSION 5.6.16 (July 05, 2006)
==============================

  * FIXED: Possibly corrupted stack (invalid program counter) returned
    through the library prolog_stack.

==============================
VERSION 5.6.15 (June 29, 2006)
==============================

  * FIXED: Replace hard-coded message about threads not dying by calling
    print_message/2.  Paulo Moura.

  * FIXED: Clear pending exception on `retry'.

  * MODIFIED: threads/0 no longer joins terminated threads.  A new predicate
    join_threads/0 does this.   Paulo Moura.

  * FIXED: Bug#174: print problem reporting problems with a predicate (/)/2.
    Holger Kanwischer.

  * FIXED: possibly lacking EXIT instruction at the end of a clause, causing