@@ -574,6 +574,7 @@ A yf			"yf"
 A yfx			"yfx"
 A yfy			"yfy"
 A zero_divisor		"zero_divisor"
+A comments		"comments"
 
 F abs			1
 F access		1
