@@ -560,3 +560,4 @@
 #define ATOM_yfx          MK_ATOM(559)
 #define ATOM_yfy          MK_ATOM(560)
 #define ATOM_zero_divisor MK_ATOM(561)
+#define ATOM_comments     MK_ATOM(562)
